--- a/playground/pyhessian.ipynb
+++ b/playground/pyhessian.ipynb
@@ -31,21 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ../data/cifar-10-python.tar.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 170498071/170498071 [00:07<00:00, 23450337.58it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ../data/cifar-10-python.tar.gz to ../data\n"
+      "Files already downloaded and verified\n"
      ]
     }
    ],
@@ -91,21 +77,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "272474"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(p.numel() for p in model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let's compute the top eigenvalue. This only takes a few seconds.\n",
+    "top_eigenvalues, top_eigenvector = hessian_comp.eigenvalues()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(top_eigenvector[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The top Hessian eigenvalue of this model is 98.4064\n"
+      "The top Hessian eigenvalue of this model is 153.4681\n",
+      "param:  torch.Size([16, 3, 3, 3])\n",
+      "direction:  torch.Size([16, 3, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16, 16, 3, 3])\n",
+      "direction:  torch.Size([16, 16, 3, 3])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([16])\n",
+      "direction:  torch.Size([16])\n",
+      "param:  torch.Size([32, 16, 3, 3])\n",
+      "direction:  torch.Size([32, 16, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 32, 3, 3])\n",
+      "direction:  torch.Size([32, 32, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 16, 1, 1])\n",
+      "direction:  torch.Size([32, 16, 1, 1])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 32, 3, 3])\n",
+      "direction:  torch.Size([32, 32, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 32, 3, 3])\n",
+      "direction:  torch.Size([32, 32, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 32, 3, 3])\n",
+      "direction:  torch.Size([32, 32, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32, 32, 3, 3])\n",
+      "direction:  torch.Size([32, 32, 3, 3])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([32])\n",
+      "direction:  torch.Size([32])\n",
+      "param:  torch.Size([64, 32, 3, 3])\n",
+      "direction:  torch.Size([64, 32, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 64, 3, 3])\n",
+      "direction:  torch.Size([64, 64, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 32, 1, 1])\n",
+      "direction:  torch.Size([64, 32, 1, 1])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 64, 3, 3])\n",
+      "direction:  torch.Size([64, 64, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 64, 3, 3])\n",
+      "direction:  torch.Size([64, 64, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 64, 3, 3])\n",
+      "direction:  torch.Size([64, 64, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64, 64, 3, 3])\n",
+      "direction:  torch.Size([64, 64, 3, 3])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([64])\n",
+      "direction:  torch.Size([64])\n",
+      "param:  torch.Size([10, 64])\n",
+      "direction:  torch.Size([10, 64])\n",
+      "param:  torch.Size([10])\n",
+      "direction:  torch.Size([10])\n"
      ]
     }
    ],
    "source": [
-    "# Now let's compute the top eigenvalue. This only takes a few seconds.\n",
-    "top_eigenvalues, top_eigenvector = hessian_comp.eigenvalues()\n",
-    "print(\"The top Hessian eigenvalue of this model is %.4f\"%top_eigenvalues[-1])"
+    "print(\"The top Hessian eigenvalue of this model is %.4f\"%top_eigenvalues[-1])\n",
+    "len(top_eigenvector[-1])\n",
+    "def get_params(model_orig,  model_perb, direction, alpha):\n",
+    "    for m_orig, m_perb, d in zip(model_orig.parameters(), model_perb.parameters(), direction):\n",
+    "        print(\"param: \", m_orig.data.shape)\n",
+    "        print(\"direction: \", d.shape)\n",
+    "        m_perb.data = m_orig.data + alpha * d\n",
+    "    return model_perb\n",
+    "\n",
+    "s = get_params(model, ptcv_get_model(\"resnet20_cifar10\", pretrained=True), top_eigenvector[-1], 0.1)"
    ]
   },
   {
@@ -162,7 +335,7 @@
    ],
    "source": [
     "# get the top eigenvector\n",
-    "top_eigenvalues, top_eigenvector = hessian_comp.eigenvalues()\n",
+    "#top_eigenvalues, top_eigenvector = hessian_comp.eigenvalues()\n",
     "\n",
     "# This is a simple function, that will allow us to perturb the model paramters and get the result\n",
     "def get_params(model_orig,  model_perb, direction, alpha):\n",
@@ -353,9 +526,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "This function was deprecated since version 1.9 and is now removed. `torch.linalg.eig` returns complex tensors of dtype `cfloat` or `cdouble` rather than real tensors mimicking complex tensors.\n\nL, _ = torch.eig(A) should be replaced with:\nL_complex = torch.linalg.eigvals(A)\n\nand\n\nL, V = torch.eig(A, eigenvectors=True) should be replaced with:\nL_complex, V_complex = torch.linalg.eig(A)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 20\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# File ~/miniforge3/lib/python3.10/site-packages/torch/_linalg_utils.py:153, in eig(self, eigenvectors, e, v)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#     150 def eig(\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#     151     self: Tensor, eigenvectors: bool = False, *, e=None, v=None\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# L, V = torch.eig(A, eigenvectors=True) should be replaced with:\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# L_complex, V_complex = torch.linalg.eig(A)\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m density_eigen, density_weight \u001b[38;5;241m=\u001b[39m \u001b[43mhessian_comp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdensity\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     21\u001b[0m get_esd_plot(density_eigen, density_weight)\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/pyhessian/hessian.py:261\u001b[0m, in \u001b[0;36mhessian.density\u001b[0;34m(self, iter, n_v)\u001b[0m\n\u001b[1;32m    259\u001b[0m         T[i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, i] \u001b[38;5;241m=\u001b[39m beta_list[i]\n\u001b[1;32m    260\u001b[0m         T[i, i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m beta_list[i]\n\u001b[0;32m--> 261\u001b[0m a_, b_ \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meigenvectors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m    263\u001b[0m eigen_list \u001b[38;5;241m=\u001b[39m a_[:, \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    264\u001b[0m weight_list \u001b[38;5;241m=\u001b[39m b_[\u001b[38;5;241m0\u001b[39m, :]\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "File \u001b[0;32m~/miniforge3/lib/python3.10/site-packages/torch/_linalg_utils.py:153\u001b[0m, in \u001b[0;36meig\u001b[0;34m(self, eigenvectors, e, v)\u001b[0m\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21meig\u001b[39m(\n\u001b[1;32m    151\u001b[0m     \u001b[38;5;28mself\u001b[39m: Tensor, eigenvectors: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;241m*\u001b[39m, e\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, v\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    152\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Tensor, Tensor]:\n\u001b[0;32m--> 153\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    154\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis function was deprecated since version 1.9 and is now removed. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    155\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`torch.linalg.eig` returns complex tensors of dtype `cfloat` or `cdouble` rather than real tensors \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    156\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmimicking complex tensors.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    157\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL, _ = torch.eig(A) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    158\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshould be replaced with:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    159\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL_complex = torch.linalg.eigvals(A)\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    160\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mand\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    161\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL, V = torch.eig(A, eigenvectors=True) \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    162\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshould be replaced with:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    163\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mL_complex, V_complex = torch.linalg.eig(A)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    164\u001b[0m     )\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: This function was deprecated since version 1.9 and is now removed. `torch.linalg.eig` returns complex tensors of dtype `cfloat` or `cdouble` rather than real tensors mimicking complex tensors.\n\nL, _ = torch.eig(A) should be replaced with:\nL_complex = torch.linalg.eigvals(A)\n\nand\n\nL, V = torch.eig(A, eigenvectors=True) should be replaced with:\nL_complex, V_complex = torch.linalg.eig(A)"
+     ]
+    }
+   ],
    "source": [
     "# File ~/miniforge3/lib/python3.10/site-packages/torch/_linalg_utils.py:153, in eig(self, eigenvectors, e, v)\n",
     "#     150 def eig(\n",
