--- a/evaluate_hessian/results/table_accuracy_cifar10_vgg11.latex
+++ b/evaluate_hessian/results/table_accuracy_cifar10_vgg11.latex
@@ -5,7 +5,7 @@
   \toprule
     ~ & Parent 1 & Parent 2 & Parent 1 (pruned) & Parent 2 (pruned) & Fused & Fused (retrained) \\
   \midrule
-    C10 V11 unP  & 90.31\% & 90.50\% & n/a     & n/a     & MISSING & MISSING \\
+    C10 V11 unP  & 90.31\% & 90.50\% & n/a     & n/a     & 86.51\% & 90.95\% \\
     C10 V11 uP30 & 90.31\% & 90.50\% & 73.14\% & 63.14\% & 62.11\% & 10.00\% \\
     C10 V11 uP50 & 90.31\% & 90.50\% & 39.13\% & 32.78\% & 36.86\% & 88.76\% \\
     C10 V11 uP70 & 90.31\% & 90.50\% & 20.80\% & 13.67\% & 13.22\% & 87.96\% \\
